base/02_cluster-addons/04_argocd/01_argocd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
  name: argocd-server-https
  namespace: argocd
spec:
  host: argocd-server.apps.cluster.example.com
  port:
    targetPort: https
  subdomain: ""
  tls:
    termination: passthrough
  to:
    kind: Service
    name: argocd-server
    weight: 100
  wildcardPolicy: None
